# spark-k8s-operator

./: .actionlint.yaml  .dockerignore  .envrc.sample  .flake8  .gitattributes  .gitignore  .hadolint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .yamllint.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.md  Tiltfile  crate-hashes.json  default.nix  deny.toml  renovate.json  rust-toolchain.toml  rustfmt.toml  shell.nix  tatus  test.yml
.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-normal-issue.md  02-bug_report.yml  bug_report.yml  config.yml  new_version.md  normal-issue.md
.github/PULL_REQUEST_TEMPLATE/: pre-release-getting-started-script.md  pre-release-rust-deps.md
.github/workflows/: build.yaml  build.yml  check_readme.yml  daily_security.yml  dev_ny-tlc-report.yaml  general_daily_security.yml  integration-test.yml  pr_pre-commit.yaml  pr_reviewdog.yaml  publish-ny-tlc-report-image.yaml  reviewdog.yaml
.readme/: README.md.j2
.readme/partials/: main.md.j2
.readme/partials/borrowed/: documentation.md.j2  footer.md.j2  header.md.j2  links.md.j2  overview_blurb.md.j2  related_reading.md.j2
ansible/: playbook.yaml  requirements.yaml
ansible/roles/expand-tests/defaults/: main.yml
ansible/roles/expand-tests/files/: generate_tests.py
ansible/roles/expand-tests/handlers/: main.yml
ansible/roles/expand-tests/tasks/: create_scenario.yaml  main.yml
ansible/roles/expand-tests/tests/: test.yml
ansible/roles/expand-tests/vars/: main.yml
apps/: BUILD.md  README.md  ny_tlc_report.py
apps/docker/: Dockerfile
deploy/: DO_NOT_EDIT.md  stackable-operators-ns.yaml
deploy/config-spec/: properties.yaml
deploy/crd/: sparkapplication.crd.yaml  sparkhistoryserver.crd.yaml
deploy/experimental/: README.md
deploy/experimental/olm/: .gitignore  build.sh  catalog-source.yaml  catalog.Dockerfile  operator-group.yaml  subscription.yaml
deploy/experimental/olm/manifests/: csv.yaml  roles.yaml
deploy/helm/: chart_testing.yaml  ct.yaml
deploy/helm/spark-k8s-operator/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/spark-k8s-operator/configs/: properties.yaml
deploy/helm/spark-k8s-operator/crds/: crds.yaml
deploy/helm/spark-k8s-operator/templates/: _helpers.tpl  _maintenance.tpl  _telemetry.tpl  configmap.yaml  deployment.yaml  roles.yaml  service.yaml  serviceaccount.yaml  spark-clusterrole.yaml  spark-connect-clusterrole.yaml  spark-history-clusterrole.yaml
deploy/helm/spark-k8s-operator/values/: oci.stackable.tech.yaml  quay.io.yaml
deploy/helm/spark-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/spark-operator/configs/: properties.yaml
deploy/helm/spark-operator/crds/: crds.yaml
deploy/helm/spark-operator/templates/: deployment.yaml  roles.yaml
deploy/manifests/: Kustomization  configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml  spark-clusterrole.yaml
deploy/olm/: bundle.sh
deploy/olm/23.4.0/manifests/: configmap.yaml  roles.yaml  sparkapplication.yaml  sparkhistoryserver.yaml  stackable-spark-k8s-operator.clusterserviceversion.yaml
deploy/olm/23.4.0/metadata/: dependencies.yaml
docker/: Dockerfile  Dockerfile.alternative
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/examples/: example-encapsulated.yaml  example-history-app.yaml  example-history-server.yaml  example-pvc.yaml  example-sparkapp-configmap.yaml  example-sparkapp-external-dependencies.yaml  example-sparkapp-image.yaml  example-sparkapp-pvc.yaml  example-sparkapp-s3-private.yaml  example-sparkapp-streaming.yaml
docs/modules/ROOT/pages/: commandline_args.adoc  env_var_args.adoc  external_storage.adoc  history_server.adoc  index.adoc  installation.adoc  job_dependencies.adoc  rbac.adoc  usage.adoc
docs/modules/ROOT/partials/: supported-versions.adoc
docs/modules/getting_started/: nav.adoc
docs/modules/spark-k8s/: nav.adoc
examples/: README-examples.md  kind-pvc.yaml  ny-tlc-report-configmap.yaml  ny-tlc-report-external-dependencies.yaml  ny-tlc-report-image.yaml  ny-tlc-report-pvc.yaml  ny-tlc-report.yaml  pi-local.yaml  simple-spark-cluster.yaml  spark-examples-s3.yaml  yellow_tripdata_2021-07.csv
extra/: crds.yaml
kind/: assert-pvc-jars.yaml  kind-pvc.yaml  minio.yaml  spark-k8s-kind-cluster-yaml
nix/: README.md  meta.json  sources.json
python/: cargo_version.py  requirements.txt
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  constants.rs  history.rs  lib.rs  logdir.rs  roles.rs  s3logdir.rs  tlscerts.rs
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: history_controller.rs  main.rs  pod_driver_controller.rs  product_logging.rs  s3logdir.rs  spark_k8s_controller.rs
rust/operator-binary/src/config/: jvm.rs  mod.rs  writer.rs
rust/operator-binary/src/connect/: affinity.rs  common.rs  controller.rs  crd.rs  executor.rs  jvm.rs  mod.rs  pdb.rs  s3.rs  server.rs  service.rs
rust/operator-binary/src/connect/controller/: dereference.rs  validate.rs
rust/operator-binary/src/crd/: affinity.rs  constants.rs  history.rs  job_dependencies.rs  listener.rs  listener_ext.rs  logdir.rs  merger.rs  mod.rs  roles.rs  template_merger.rs  template_spec.rs  tlscerts.rs
rust/operator-binary/src/history/: controller.rs  history_controller.rs  mod.rs  service.rs
rust/operator-binary/src/history/config/: jvm.rs
rust/operator-binary/src/history/controller/: dereference.rs  validate.rs
rust/operator-binary/src/history/operations/: mod.rs  pdb.rs
rust/operator-binary/src/spark_k8s_controller/: dereference.rs  validate.rs
rust/operator-binary/src/webhooks/: conversion.rs
scripts/: auto-retry-tests.py  docs_templating.sh  ensure_one_trailing_newline.py  generate-manifests.sh  render_readme.sh  run-tests  run_tests.sh
tests/: README-templating.md  README.md  infrastructure.yaml  interu.yaml  kuttl-test.yaml.j2  kuttl-test.yaml.jinja2  release.yaml  test-definition.yaml
tests/ansible/: playbook.yaml  requirements.yaml
(+370 files in other folders)
