[workspace]

members = [
    "rust/crd", "rust/operator-binary"
]

[workspace.dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag="0.45.1" }
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.7"
strum = "0.24"
tracing = "0.1"
tracing-futures = "0.2"
clap = "4.1"
futures = "0.3"
tokio = "1.24"
anyhow = "1.0"

#[patch."https://github.com/stackabletech/operator-rs.git"]
#stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main"}
#stackable-operator = { path = "../operator-rs" }
