[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the Apache Spark CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-spark-k8s-crd"
repository = "https://github.com/stackabletech/spark-k8s-operator"
version = "23.4.1"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag="0.38.0" }

semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
rstest = "0.16.0"
