[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the Apache Spark CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-spark-k8s-crd"
repository = "https://github.com/stackabletech/spark-k8s-operator"
version = "23.7.0"
publish = false

[dependencies]
stackable-operator = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
rstest = "0.17.0"
