[package]
name = "stackable-spark-k8s-crd"
description = "Contains the Apache Spark CRD structs and utilities"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
product-config.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_yaml.workspace = true
indoc.workspace = true
