[package]
name = "stackable-spark-k8s-operator"
description = "Stackable Kubernetes Operator for Apache Spark"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-spark-k8s-crd = { path = "../crd" }

anyhow.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
clap.workspace = true
futures.workspace = true
tokio.workspace = true

[build-dependencies]
built.workspace = true
